--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,12 @@ dependencies:
     sdk: flutter
   page_transition: ^1.1.4
   simple_animations: ^1.3.3
+  rxdart: 0.22.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  provider: 3.1.0
 
 dev_dependencies:
   flutter_test:
